Moved variables into relevant LESS files

--- a/assets/less/base/grid.less
+++ b/assets/less/base/grid.less
@@ -1,13 +1,12 @@
 /* ==========================================================================
-// g
+// GRID
 // =========================================================================*/
-// @TODO: Make more dynamic
 
-// .g = g
-// .c = colum
-// .w = w
+// .g = grid
+// .c = column
+// .w = wrapper
 
-// colum CALCULATIONS
+// COLUMN CALCULATIONS
 // ----------------------------------------------------
 
 ._colwidth (@numberOfcols: 1, @numberOfTotalCols: @grid-cols){
