--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -3,6 +3,16 @@
 // Reference: http://github.com/necas/normalize.css
 // =========================================================================*/
 
+// VARIABLES
+// ----------------------------------------------------
+
+@SELECT-BgColor:                @COLOR-Base;
+@SELECT-TextColor:              @COLOR-White;
+
+@STYLE-RoundedCorners:          true; // Rounds buttons, alerts, pagination, wells
+@STYLE-BorderRadius:            8;
+@STYLE-BodyBgColor:             @COLOR-White;
+
 // HTML5 DISPLAY
 // ----------------------------------------------------
 
