--- a/assets/less/base/prettify.less
+++ b/assets/less/base/prettify.less
@@ -3,21 +3,21 @@
 // PRETTIFY
 // =========================================================================*/
 
-// VARS
+// VARIABLES
 // =========================================================================
 
-@LOCAL-NoCode: @COLOR-Black;
-@LOCAL-String: @COLOR-YellowLight;
-@LOCAL-Keyword: @COLOR-Cyan;
-@LOCAL-Comment: @COLOR-GreyDark;
-@LOCAL-Type: @COLOR-Cyan;
-@LOCAL-Literal: @COLOR-Purple;
-@LOCAL-Punctuation: @COLOR-GreyLighter;
-@LOCAL-Plaintext: @COLOR-GreyLighter;
-@LOCAL-Tag: @COLOR-Pink;
-@LOCAL-Attribute: @COLOR-Lime;
-@LOCAL-AttributeValue: @COLOR-LimeDark;
-@LOCAL-Decimal: @COLOR-GreyLighter;
+@PRETTIFY-NoCode:               @COLOR-Black;
+@PRETTIFY-String:               @COLOR-YellowLight;
+@PRETTIFY-Keyword:              @COLOR-Cyan;
+@PRETTIFY-Comment:              @COLOR-GreyDark;
+@PRETTIFY-Type:                 @COLOR-Cyan;
+@PRETTIFY-Literal:              @COLOR-Purple;
+@PRETTIFY-Punctuation:          @COLOR-GreyLighter;
+@PRETTIFY-Plaintext:            @COLOR-GreyLighter;
+@PRETTIFY-Tag:                  @COLOR-Pink;
+@PRETTIFY-Attribute:            @COLOR-Lime;
+@PRETTIFY-AttributeValue:       @COLOR-LimeDark;
+@PRETTIFY-Decimal:              @COLOR-GreyLighter;
 
 .prettyprint {
     display: block;
@@ -41,18 +41,18 @@
         background: @COLOR-Yellow;
     }
 
-    .nocode { background-color: none; color: @LOCAL-NoCode }
-    .str { color: @LOCAL-String; }
-    .kwd { color: @LOCAL-Keyword; }
-    .com { color: @LOCAL-Comment; }
-    .typ { color: @LOCAL-Type; }
-    .lit { color: @LOCAL-Literal; }
-    .pun { color: @LOCAL-Punctuation; }
-    .pln { color: @LOCAL-Plaintext; }
-    .tag { color: @LOCAL-Tag; }
-    .atn { color: @LOCAL-Attribute; }
-    .atv { color: @LOCAL-AttributeValue; }
-    .dec { color: @LOCAL-Decimal; }
+    .nocode { background-color: none; color: @PRETTIFY-NoCode }
+    .str { color: @PRETTIFY-String; }
+    .kwd { color: @PRETTIFY-Keyword; }
+    .com { color: @PRETTIFY-Comment; }
+    .typ { color: @PRETTIFY-Type; }
+    .lit { color: @PRETTIFY-Literal; }
+    .pun { color: @PRETTIFY-Punctuation; }
+    .pln { color: @PRETTIFY-Plaintext; }
+    .tag { color: @PRETTIFY-Tag; }
+    .atn { color: @PRETTIFY-Attribute; }
+    .atv { color: @PRETTIFY-AttributeValue; }
+    .dec { color: @PRETTIFY-Decimal; }
 
 }
 
