--- a/assets/less/base_modules/accordion.less
+++ b/assets/less/base_modules/accordion.less
@@ -8,7 +8,7 @@
 // VARIABLES
 // ----------------------------------------------------
 
-@LOCAL-AccordianBackground:			@COLOR-Base;
+@ACCORDION-BgColor:				@COLOR-Base;
 
 // BASE
 // ----------------------------------------------------
@@ -19,7 +19,7 @@
 
 /* Accordian headers */
 .accordion__tab {
-	background-color: @LOCAL-AccordianBackground;
+	background-color: @ACCORDION-BgColor;
 	display: block;
 	margin: 0;
 }
