--- a/assets/less/base_modules/alert.less
+++ b/assets/less/base_modules/alert.less
@@ -5,19 +5,22 @@
 // ALERT
 // =======================================================================*/
 
+// VARIABLES
+// ----------------------------------------------------
+
 @ALERT-TextShadowcolor:         rgba(255, 255, 255, 0.5);
 
-@ALERT-InfoBgColor:             @COLOR-BlueLighter;
-@ALERT-InfoTextColor:           @COLOR-BlueDarker;
-@ALERT-InfoBordercolor:         @COLOR-BlueDark;
+@ALERT-InfoBgColor:             @COLOR-BlueLight;
+@ALERT-InfoTextColor:           @COLOR-White;
+@ALERT-InfoBordercolor:         @COLOR-BlueLighter;
 
-@ALERT-ErrorBgColor:            @COLOR-RedLighter;
-@ALERT-ErrorTextColor:          @COLOR-RedDarker;
-@ALERT-ErrorBordercolor:        @COLOR-RedDark;
+@ALERT-ErrorBgColor:            @COLOR-RedLight;
+@ALERT-ErrorTextColor:          @COLOR-White;
+@ALERT-ErrorBordercolor:        @COLOR-RedLighter;
 
-@ALERT-SuccessBgColor:          @COLOR-GreenLighter;
-@ALERT-SuccessTextColor:        @COLOR-GreenDarker;
-@ALERT-SuccessBordercolor:      @COLOR-GreenDark;
+@ALERT-SuccessBgColor:          @COLOR-GreenLight;
+@ALERT-SuccessTextColor:        @COLOR-White;
+@ALERT-SuccessBordercolor:      @COLOR-GreenLighter;
 
 // BASE
 // ----------------------------------------------------
@@ -35,7 +38,7 @@
     ._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
 }
 
-// VARIABLES
+// VARIANTS
 // ----------------------------------------------------
 
 .alert--info {
