--- a/assets/less/base_modules/browsehappy.less
+++ b/assets/less/base_modules/browsehappy.less
@@ -5,6 +5,15 @@
 // BROWSEHAPPY
 // =======================================================================*/
 
+// VARIABLES
+// ----------------------------------------------------
+
+@BROWSEHAPPY-Color:				@COLOR-White;
+@BROWSEHAPPY-BgColor:			@COLOR-Red;
+
+// BASE
+// ----------------------------------------------------
+
 .browsehappy {
     margin: 0;
     padding: 1em 0;
@@ -12,6 +21,7 @@
     color: @BROWSEHAPPY-Color;
     font-weight: bold;
     text-align: center;
+    
     a {
         color: @BROWSEHAPPY-Color;
     }
