--- a/assets/less/base_modules/media.less
+++ b/assets/less/base_modules/media.less
@@ -2,9 +2,12 @@
 .media-styles() when (@MODULE-Media) {
 
 /* ==========================================================================
-// MEDIA OBJECT
+// MEDIA
 // Source: http://www.stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code/
 // =========================================================================*/
+
+// BASE
+// ----------------------------------------------------
 
 .media {
     ._margin (0, 0, @TYPE-LineHeight, 0);
@@ -36,7 +39,7 @@
 
 @media only screen and (max-width: @MQ-Small) {
 
-    .media { }
+    .media {}
 
     .media__image {
         float: none;
