--- a/assets/less/base_modules/story.less
+++ b/assets/less/base_modules/story.less
@@ -2,73 +2,84 @@
 .story-styles() when (@MODULE-Story) {
 
 /* =========================================================================
-// IMAGE
+// STORY
 // =======================================================================*/
+
+// VARIABLES
+// ----------------------------------------------------
+
+@STORY-BgColor:				@COLOR-White;
+@STORY-CiteColor:			@TYPE-FontColor;
+
+// BASE
+// ----------------------------------------------------
 
 .story {
 	background-clip: padding-box;
-	background-color: @COLOR-White;
-	._margin(10,0,20,0);
-	._padding(20);
-	._border-radius(2);
-	._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
+	background-color: @STORY-BgColor;
+	._margin (10, 0, 20 ,0);
+	._padding (20);
+	._border-radius (2);
+	._box-shadow-custom (~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
 }
 
 .story__title {
-	._font-size-heading(@TYPE-SIZE-Beta);
+	._font-size-heading (@TYPE-SIZE-Beta);
 }
 
 .story__body {
-	._margin-bottom(20);
+	._margin-bottom (20);
 }
 
 .story__actions {
-	border-top: 1px solid darken(@COLOR-White, 5);
-	._margin-top(15);
-	._padding-top(20);
+	border-top: 1px solid darken(@STORY-BgColor, 5);
+	._margin-top (15);
+	._padding-top (20);
 }
 
 .story-ident {
-	._margin-bottom(20);
-	._clearfix();
+	._margin-bottom (20);
+	._clearfix ();
 }
 .story-ident__avatar-link {
-	display:block;
-	position:relative;
-	float:left;
-	border: 1px solid darken(@COLOR-White, 10);
-	._margin-right(20);
+	display: block;
+	position: relative;
+	float: left;
+	border: 1px solid darken(@STORY-BgColor, 10);
+	._margin-right (20);
 }
 
 .story-cite {
-	border: 1px solid darken(@COLOR-White, 10);
-	._margin(10,0,20,0);
-	._border-radius(2);
+	border: 1px solid darken(@STORY-BgColor, 10);
+	._margin (10, 0, 20, 0);
+	._border-radius (2);
 }
+
 .story-cite__image {
-	width:100%;
+	width: 100%;
 }
 
 .story-cite__content {
-	display:block;
-	._padding(20);
+	display: block;
+	._padding (20);
 }
 
 .story-cite__link {
+	color: lighten(@STORY-CiteColor, 30);
 	display:block;
 	text-decoration: none;
-	color: lighten(@TYPE-FontColor, 30);
 
 	&:link {
-		color: lighten(@TYPE-FontColor, 30);
+		color: lighten(@STORY-CiteColor, 30);
 	}
+
 	&:visited {
-		color: lighten(@TYPE-FontColor, 30);
+		color: lighten(@STORY-CiteColor, 30);
 	}
+
 	&:hover {}
 	&:focus {}
 	&:active {}
 }
-
 
 } .story-styles();
