--- a/assets/less/base_modules/well.less
+++ b/assets/less/base_modules/well.less
@@ -5,9 +5,17 @@
 // WELL
 // =========================================================================*/
 
+// VARIABLES
+// ----------------------------------------------------
+
+@WELL-BgColor:                  @COLOR-GreyLight;
+
+// BASE
+// ----------------------------------------------------
+
 .well {
-    display: block;
     background-color: @WELL-BgColor;
+    display: block;
     ._padding (@TYPE-FontSize);
     ._margin (0, 0, @TYPE-LineHeight, @TYPE-LineHeight);
     ._border-radius ();
