--- a/assets/less/modules/_template.less
+++ b/assets/less/modules/_template.less
@@ -2,7 +2,10 @@
 // TEMPLATE
 // =======================================================================*/
 
-// ALL
+// COLOURS
+// ----------------------------------------------------
+
+// BASE
 // ----------------------------------------------------
 
 .template {
