--- a/assets/less/modules/article.less
+++ b/assets/less/modules/article.less
@@ -2,9 +2,8 @@
 // ARTICLE
 // =======================================================================*/
 
-// ALL
+// BASE
 // ----------------------------------------------------
-
 
 .article {}
 
