--- a/assets/less/modules/page.less
+++ b/assets/less/modules/page.less
@@ -2,7 +2,7 @@
 // PAGE
 // =======================================================================*/
 
-// ALL
+// BASE
 // ----------------------------------------------------
 
 .page {}
@@ -18,8 +18,8 @@
 	._font-size (@TYPE-SIZE-Delta);
 }
 
-.page_body {}
-.page_foot {}
+.page__body {}
+.page__foot {}
 
 // MOBILE
 // ----------------------------------------------------
