--- a/assets/less/modules/section.less
+++ b/assets/less/modules/section.less
@@ -2,7 +2,7 @@
 // SECTION
 // =======================================================================*/
 
-// ALL
+// BASE
 // ----------------------------------------------------
 
 .section {
