--- a/assets/less/base/_alloy.less
+++ b/assets/less/base/_alloy.less
@@ -1,6 +1,6 @@
-// ==========================================================================
+/* =========================================================================
 // ALLOY
-// =========================================================================//
+// =======================================================================*/
 
 // BASE - Order !important
 // ----------------------------------------------------
