--- a/assets/less/base_modules/box.less
+++ b/assets/less/base_modules/box.less
@@ -5,6 +5,19 @@
 // BOX
 // =======================================================================*/
 
+// COLOURS
+// ----------------------------------------------------
+
+@BOX-HeadColor:                 @COLOR-White;
+@BOX-HeadBgColor:               @COLOR-Base;
+@BOX-BodyColor:                 @TYPE-FontColor;
+@BOX-BodyBgColor:               @COLOR-White;
+@BOX-FootColor:                 @COLOR-White;
+@BOX-FootBgColor:               @COLOR-Base;
+
+// BASE
+// ----------------------------------------------------
+
 .box {
     display: block;
     ._margin (0, 0, @TYPE-LineHeight, 0);
@@ -12,24 +25,26 @@
 }
 
 .box__head {
+    background-color: @BOX-HeadBgColor;
     display: block;
-    background-color: @BOX-HeaderBgColor;
     ._border-radius-custom (@STYLE-BorderRadius, @STYLE-BorderRadius, 0,  0);
 }
 
 .box__title {
+    color: @BOX-HeadColor;
     line-height: 1;
-    color: @BOX-HeaderTextColor;
 }
 
 .box__body {
-    display: block;
+    color: @BOX-BodyColor;
     background-color: @BOX-BodyBgColor;
+    display: block;
 }
 
 .box__foot {
+    color: @BOX-FootColor;
+    background-color: @BOX-FootBgColor;
     display: block;
-    background-color: @BOX-FooterBgColor;
     ._border-radius-custom (0, 0, @STYLE-BorderRadius, @STYLE-BorderRadius);
 }
 
@@ -39,7 +54,7 @@
     margin-bottom: 0;
     ._padding (@TYPE-FontSize);
 
-    :last-child {
+    &:last-child {
         margin-bottom: 0;
     }
 }
