--- a/assets/less/base_modules/form.less
+++ b/assets/less/base_modules/form.less
@@ -5,7 +5,15 @@
 // FORM
 // =========================================================================*/
 
-// DEFAULT
+// VARIABLES
+// ----------------------------------------------------
+
+@FORM-Color:                @COLOR-GreyDarker;
+@FORM-BgColor:              @COLOR-White;
+@FORM-BorderColor:          @COLOR-GreyLight;
+@FORM-Placeholder:          @COLOR-GreyLight;
+
+// BASE
 // ----------------------------------------------------
 
 .form {
@@ -23,19 +31,18 @@
 }
 
 .form__input {
+    color: @FORM-Color;
     clear: left;
     display: block;
     width: 100%;
     max-width: 100%;
-    border: 1px solid #888;
-    color: #555;
-    ._padding(6, 8);
+    border: 1px solid @FORM-BorderColor;
+    ._padding (6, 8);
     ._border-radius (4);
 
     &:focus {
         outline: 0;
         outline: thin dotted \9;
-        border-Color: rgba(82, 168, 236, 0.8);
         ._box-shadow-custom (~"inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)");
     }
 }
@@ -77,7 +84,7 @@
 @media only screen and (min-width: @MQ-Medium-min) {
 
     .form__label {
-        margin-top: 2px;
+        ._margin-top (2);
     }
 
     .form__input {
