--- a/assets/less/base_modules/modal.less
+++ b/assets/less/base_modules/modal.less
@@ -2,22 +2,28 @@
 .modal-styles() when (@MODULE-Modal) {
 
 /* =========================================================================
-// ACCORDION
+// MODAL
 // =======================================================================*/
+
+// VARIABLES
+// ----------------------------------------------------
+
+@MODAL-MaskBgColor:				rgba(0, 0, 0, 0.5);
 
 // BASE
 // ----------------------------------------------------
-.modal{}
+
+.modal {}
 
 /* Accordian headers */
-.modal__mask{
-	background-color: rgba(0,0,0,.5);
+.modal__mask {
+	background-color: @MODAL-MaskBgColor;
 	height: 100%;
 	width: 100%;
 	z-index: 3;
 	position: fixed;
-	top:0;
-	left:0;
+	top: 0;
+	left: 0;
 	._transition-custom(~"visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1)");
 	._transform-custom(~"translateZ(0)");
 }
@@ -27,6 +33,4 @@
 	visibility: visible;
 }
 
-// END
-// -----------------------------------------------------
 } .modal-styles();
