--- a/assets/less/base_modules/panel.less
+++ b/assets/less/base_modules/panel.less
@@ -2,12 +2,20 @@
 .panel-styles() when (@MODULE-Panel) {
 
 /* =========================================================================
-// IMAGE
+// PANEL
 // =======================================================================*/
 
+// VARIABLES
+// ----------------------------------------------------
+
+@PANEL-BgColor:				@COLOR-Base;
+
+// BASE
+// ----------------------------------------------------
+
 .panel {
+	background-color: @PANEL-BgColor;
 	background-clip: padding-box;
-	background-color: @COLOR-Base;
 	._margin (10, 0, 20, 0);
 	._padding (20);
 	._border-radius (2);
@@ -24,7 +32,7 @@
 }
 
 .panel__actions {
-	border-top: 1px solid lighten(@COLOR-Base, 5);
+	border-top: 1px solid lighten(@PANEL-BgColor, 5);
 	._margin-top (15);
 	._padding-top (20);
 }
