--- a/assets/less/base_modules/tooltip.less
+++ b/assets/less/base_modules/tooltip.less
@@ -7,6 +7,12 @@
 // http://www.webdesignerdepot.com/2012/11/how-to-create-a-simple-css3-tooltip/
 // =======================================================================*/
 
+// VARIABLES
+// ---------------------------------------------------- 
+
+@TOOLTIP-Color:                 @COLOR-White;
+@TOOLTIP-BgColor:               rgba(0, 0, 0, 0.9);
+
 // BASE
 // ----------------------------------------------------
 
@@ -19,9 +25,9 @@
     position: absolute;
     bottom: 90%;
     left: -9999px;
-    margin-bottom: 12px;
     z-index: 100;
     opacity: 0;
+    ._margin-bottom (12);
 
     -webkit-transition: bottom 0.25s ease-in-out, opacity 0.25s ease-in-out;
     -moz-transition: bottom 0.25s ease-in-out, opacity 0.25s ease-in-out;
@@ -31,17 +37,17 @@
 [data-tooltip]:after {
     content: attr(data-tooltip);
     padding: 0.5em;
-    ._font-size (12);
     text-align: center;
-    color: #fff;
+    color: @TOOLTIP-Color;
     background: @TOOLTIP-BgColor;
     white-space: now;
-
+    text-shadow: 0 0 5px @COLOR-Black;
+    ._font-size (12);
     ._border-radius (5);
-    text-shadow: 0 0 5px #000;
-    -moz-box-shadow: 0 0 5px rgba(0,0,0,0.3);
-    -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.3);
-    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    
+    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 [data-tooltip].tooltip-large:after {
@@ -55,7 +61,7 @@
     height: 0;
     border-width: 6px;
     border-style: solid;
-    border-Color: @TOOLTIP-BgColor transparent transparent transparent;
+    border-color: @TOOLTIP-BgColor transparent transparent transparent;
     margin-bottom: 0;
 }
 
