--- a/assets/less/modules/list.less
+++ b/assets/less/modules/list.less
@@ -1,8 +1,8 @@
 /* =========================================================================
-// List
+// LIST
 // =======================================================================*/
 
-// ALL
+// BASE
 // ----------------------------------------------------
 
 .list {
