--- a/assets/less/modules/wraps.less
+++ b/assets/less/modules/wraps.less
@@ -2,9 +2,11 @@
 // WRAPS
 // =======================================================================*/
 
-// ALL
+// VARIABLES
 // ----------------------------------------------------
 
+// BASE
+// ----------------------------------------------------
 
 .w {}
 
