--- a/assets/less/modules/links.less
+++ b/assets/less/modules/links.less
@@ -72,6 +72,13 @@ a {
 	._link();
 }
 
+// VARIANTS
+// ----------------------------------------------------
+
+.link--logo {
+
+}
+
 // MOBILE
 // ----------------------------------------------------
 
