--- a/content/Systems/typography.hbs
+++ b/content/Systems/typography.hbs
@@ -105,41 +105,32 @@ nav-variant: "typography"
 
 		        		<div class="section__body rte">
 
-				        	<ul class="list">
-				        		<li class="list__item">Sed eget ex urna.</li>
-				        		<li class="list__item">Nulla interdum ligula at nunc accumsan congue.</li>
-				        		<li class="list__item">Donec vitae ex vitae.</li>
-				        		<li class="list__item">Nam rhoncus eget enim quis porta.
-				        			<ol class="list">
-						        		<li class="list__item">Sed eget ex urna.</li>
-						        		<li class="list__item">Nulla interdum ligula at nunc accumsan congue.</li>
-						        		<li class="list__item">Donec vitae ex vitae.</li>
+				        	<ul>
+				        		<li>Sed eget ex urna.</li>
+				        		<li>Nulla interdum ligula at nunc accumsan congue.</li>
+				        		<li>Donec vitae ex vitae.
+				        			<ol>
+						        		<li>Sed eget ex urna.</li>
+						        		<li>Nulla interdum ligula at nunc accumsan congue.</li>
+						        		<li>Donec vitae ex vitae.</li>
 						        	</ol>
 				        		</li>
-				        		<li class="list__item">Sollicitudin est accumsan.</li>
+				        		<li>Nam rhoncus eget enim quis porta.</li>
+				        		<li>Sollicitudin est accumsan.</li>
 				        	</ul>
 
-				        	<ul class="list list--clean">
-				        		<li class="list__item">Sed eget ex urna.</li>
-				        		<li class="list__item">Nulla interdum ligula at nunc accumsan congue.</li>
-				        		<li class="list__item">Donec vitae ex vitae.</li>
-				        		<li class="list__item">Nam rhoncus eget enim quis porta.</li>
-				        		<li class="list__item">Sollicitudin est accumsan.</li>
-				        	</ul>
-
-
-				        	<ol class="list">
-				        		<li class="list__item">Sed eget ex urna.</li>
-				        		<li class="list__item">Nulla interdum ligula at nunc accumsan congue.
-				        		<ul class="list">
-						        		<li class="list__item">Sed eget ex urna.</li>
-						        		<li class="list__item">Nulla interdum ligula at nunc accumsan congue.</li>
-						        		<li class="list__item">Donec vitae ex vitae.</li>
+				        	<ol>
+				        		<li>Sed eget ex urna.</li>
+				        		<li>Nulla interdum ligula at nunc accumsan congue.</li>
+				        		<li>Donec vitae ex vitae.
+					        		<ul>
+						        		<li>Sed eget ex urna.</li>
+						        		<li>Nulla interdum ligula at nunc accumsan congue.</li>
+						        		<li>Donec vitae ex vitae.</li>
 						        	</ul>
 						        </li>
-				        		<li class="list__item">Donec vitae ex vitae.</li>
-				        		<li class="list__item">Nam rhoncus eget enim quis porta.</li>
-				        		<li class="list__item">Sollicitudin est accumsan.</li>
+				        		<li>Nam rhoncus eget enim quis porta.</li>
+				        		<li>Sollicitudin est accumsan.</li>
 				        	</ol>
 
 			        	</div>
