--- a/content/_partials/header.hbs
+++ b/content/_partials/header.hbs
@@ -1,5 +1,23 @@
 <header id="header" role="banner" class="w w--header">
-	<div class="g">
-		<div class="c__md--1"><a href="/" class="link link--logo"><strong>Alloy:</strong> Design Language</a></div>
+	<div class="g g--nogutter">
+		<div class="c__lg--1">
+			<a href="/" class="link link--logo" title="Alloy"><img src="/assets/img/logo-header.png" alt="The Homer" /></a>
+		</div>
 	</div>
 </header>
+
+<div class="w w--navigation">
+	<div class="g g--nogutter">
+		<div class="c__lg--1">
+			<nav id="navigation" role="navigation" class="nav">
+				<ul class="list__navigation">
+					<li class="list__item"><a href="/" class="list__link" title="Home"><span>Home</span></a></li>
+					<li class="list__item"><a href="/" class="list__link current" title=""><span>Current Page</span></a></li>
+					<li class="list__item"><a href="/" class="list__link" title=""><span>Page</span></a></li>
+					<li class="list__item"><a href="/" class="list__link" title=""><span>Page</span></a></li>
+					<li class="list__item"><a href="/" class="list__link" title=""><span>Page</span></a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+</div>
