--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -127,6 +127,7 @@ a:active {
 ul,
 ol,
 menu {
+    list-style: none;
     ._margin (@TYPE-LineHeight, 0, @TYPE-LineHeight, 40);
     ._padding (0, 0, 0, 40);
 }
