--- a/assets/less/base_modules/rte.less
+++ b/assets/less/base_modules/rte.less
@@ -6,20 +6,6 @@
 // =========================================================================*/
 
 .rte {
-    .image--left {
-        float: left;
-        ._margin (0, 20, 10, 0);
-    }
-
-    .image--right {
-        float: right;
-        ._margin (0, 0, 10, 20);
-    }
-
-    .image--block {
-        width: 100%;
-        ._margin (10, 0, 10, 0);
-    }
     
     ol,
     ul {
@@ -32,16 +18,22 @@
             ._margin (10, 0, 10, 0);
         }
     }
-    
+
     ul {
-        
+        list-style: circle;
     }
 
-    strong, b {
+    ol {
+        list-style: decimal;
+    }
+
+    strong,
+    b {
 
     }
 
-    i, em {
+    i,
+    em {
 
     }
 
@@ -66,6 +58,7 @@
     dl {}
     dd {}
     dt {}
+    
 }
 
 } .rte-styles();
