--- a/content/_partials/footer.hbs
+++ b/content/_partials/footer.hbs
@@ -5,7 +5,7 @@
 			<div class="panel">
 				<div class="panel__title">Message Us</div>
 				<div class="panel__body">ALLOY has a gitter chat room setup so that we can talk directly to you! Talk to us about how to improve ALLOY, discuss features, problems and everything else.</div>
-				<div class="panel__actions"><a href="https://gitter.im/gfinbow/alloy" class="button"><span>Join the chat</a></div>
+				<div class="panel__actions"><a href="https://gitter.im/gfinbow/alloy" class="button"><span>Join the chat</span></a></div>
 			</div>
 		</div>
 	
@@ -26,4 +26,4 @@
 		</div>
 
 	</div>
-<div>
+</div>
