--- a/content/index.hbs
+++ b/content/index.hbs
@@ -12,7 +12,7 @@ nav-variant: home
 			<div class="page page--{{nav-variant}}">
 				<div class="page__head">
 					<h1 class="page__title">{{title}}</h1>
-					<p class="page__subtitle">{{subtitle}}</p>
+					<h2 class="page__subtitle">{{subtitle}}</h2>
 				</div>
 
 				<div class="page__body">
