Added Badges code

--- a/content/Components/badges.hbs
+++ b/content/Components/badges.hbs
@@ -18,6 +18,7 @@ nav-variant: "badges"
 <!-- writings -->
 		        <div class="article__body rte">
 
+		        {{>badge badge }}
 		        </div>
 
 <!-- example -->
