Added size to wells

--- a/content/_partials/well.hbs
+++ b/content/_partials/well.hbs
@@ -1,5 +1,5 @@
 {{#this}}
-<div class="well rte{{#if item.modifier}} well--{{item.modifier}}{{/if}}">
+<div class="well{{#if item.modifier}} well--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}">
 	{{{content.text}}}
 </div>
 {{/this}}
