Added pagination and made navigation dynamic

--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -11,7 +11,7 @@
 
 @STYLE-RoundedCorners:          true; // Rounds buttons, alerts, pagination, wells
 @STYLE-BorderRadius:            8;
-@STYLE-BodyBgColor:             @COLOR-White;
+@STYLE-BodyBgColor:             @COLOR-GreyLighter;
 
 // HTML5 DISPLAY
 // ----------------------------------------------------
@@ -96,7 +96,6 @@ body {
 a {
     color: @LINK-Link;
     background: transparent;
-    ._transition (cor,0.3s);
 }
 
 a:visited {
