--- a/assets/less/base_modules/rte.less
+++ b/assets/less/base_modules/rte.less
@@ -17,6 +17,14 @@
             ._padding-left (20);
             ._margin (10, 0, 10, 0);
         }
+
+        &:first-child {
+            margin-top: 0;
+        }
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     ul {
