--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -20,6 +20,7 @@
 @import "base_modules/story.less";
 @import "base_modules/rte.less";
 @import "base_modules/alert.less";
+@import "base_modules/pagination.less";
 
 // MODULES
 // ----------------------------------------------------
