--- a/assets/less/modules/links.less
+++ b/assets/less/modules/links.less
@@ -79,6 +79,15 @@ a {
 
 }
 
+.link--pagination {
+	color: @PAGINATION-BgColor;
+	display: inline-block;
+    text-decoration: none;
+    vertical-align: top;
+    line-height: 1;
+    ._font-size (28);
+}
+
 // MOBILE
 // ----------------------------------------------------
 
