--- a/assets/less/modules/wrap.less
+++ b/assets/less/modules/wrap.less
@@ -21,6 +21,7 @@
 .w--navigation {
 	background-color: @NAVIGATION-BgColor;
 	padding: 0;
+	._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
 }
 
 .w--primary {}
