--- a/content/Components/button.hbs
+++ b/content/Components/button.hbs
@@ -1,10 +1,10 @@
 ---
 title: Buttons
 
-
 nav-title: "Buttons"
 nav-text: "Buttons"
 nav-variant: "button"
+mainmenu: "true"
 ---
 
 <main class="w w--main">
