--- a/content/Components/pagination.hbs
+++ b/content/Components/pagination.hbs
@@ -28,7 +28,19 @@ nav-variant: "pagination"
 
 		            <div class="secton__body">
 				        <!-- code -->
+							<div class="pagination">
 
+								<a href="#" class="link link--pagination"><span class="hidden-text">Previous</span><i class="icon icon--left216"></i></a>
+							        
+						        <ul class="list list--pagination">
+				                    <li class="list__item"><a class="list__link current" href="#">1</a></li>
+				                    <li class="list__item"><a class="list__link" href="#">2</a></li>
+				                    <li class="list__item"><a class="list__link" href="#">3</a></li>
+						        </ul>
+						        
+						        <a href="#" class="link link--pagination"><span class="hidden-text">Previous</span><i class="icon icon--right237"></i></a>
+
+							</div>
 				        <!-- end of code -->
 			        </div>
 
@@ -42,8 +54,18 @@ nav-variant: "pagination"
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
+&lt;div class="pagination"&gt;
+&lt;a href="#" class="link link--pagination"&gt;&lt;span class="hidden-text"&gt;Previous&lt;/span&gt;&lt;i class="icon icon--left216"&gt;&lt;/i&gt;&lt;/a&gt;
 
-			             </code></pre>
+&lt;ul class="list list--pagination"&gt;
+	&lt;li class="list__item"&gt;&lt;a class="list__link current" href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
+	&lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;2&lt;/a&gt;&lt;/li&gt;
+	&lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;3&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+  
+&lt;a href="#" class="link link--pagination"&gt;&lt;span class="hidden-text"&gt;Previous&lt;/span&gt;&lt;i class="icon icon--right237"&gt;&lt;/i&gt;&lt;/a&gt;
+&lt;/div&gt;
+			            </code></pre>
 		            </div>
 
 		        </section>
