--- a/assets/less/base/helpers.less
+++ b/assets/less/base/helpers.less
@@ -7,10 +7,12 @@
 
 // Clearfix as a mixin
 ._clearfix () {
-    &:before, &:after {
+    &:before,
+    &:after {
         content: "";
         display: table;
     }
+    
     &:after {
         clear: both;
     }
@@ -26,15 +28,21 @@
 // ----------------------------------------------------
 
 ._text-overflow() {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 ._inline-block () {
     display: inline-block;
     zoom: 1;
     *display: inline;
+}
+
+.hidden-text {
+    position: absolute;
+    overflow: hidden;
+    height: 0;
 }
 
 // DISPLAY
@@ -65,7 +73,6 @@
     text-indent: 100%;
     white-space: now;
 }
-
 
 // ALIGNMENT
 // ----------------------------------------------------
