--- a/assets/less/modules/list.less
+++ b/assets/less/modules/list.less
@@ -6,8 +6,8 @@
 // ----------------------------------------------------
 
 .list {
-    margin: 0;
-    padding: 0;
+    //margin: 0;
+    //padding: 0;
 }
 
 .list__links {
