--- a/content/404.hbs
+++ b/content/404.hbs
@@ -13,16 +13,17 @@ nav-variant: "error"
 
 			<div class="page page--{{nav-variant}}">
 				<div class="page__head">
-		        	<h1>Page Not Found</h1>
+		        	<h1 class="page__title">Oops</h1>
+		        	<h2 class="page__subtitle">Something went wrong&hellip;</h2>
 		        </div>
 
-		        <div class="page__body">
+		        <div class="page__body rte">
 			        <p>Unfortunately the page that you requested could not be found. Please try one of the following:</p>
 
 			        <ul>
-			            <li>Go back to the previous page.</li>
-			            <li>Visit the <a href="/">homepage</a>.</li>
-			            <li>Use the navigation at the top of the page.</li>
+			            <li>Go back to the <a href="javascript:window.history.back()">previous page</li>
+			            <li>Visit the <a href="/">homepage</a></li>
+			            <li>Use the navigation at the top of the page</li>
 			        </ul>
 		        </div>
 	        </div>
