Fixing ALLOY base pages

--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -43,12 +43,12 @@
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    {{> header }}
-    {{> navigation }}
+    {{> ALLOY_header }}
+    {{> ALLOY_navigation }}
     {{> body }}
-    {{> footer }}
-    {{> copyright }}
-    {{> scripts }}
+    {{> ALLOY_footer }}
+    {{> ALLOY_copyright }}
+    {{> ALLOY_scripts }}
 
     <!-- <div class="modal__mask modal__mask--visible"></div> -->
 
