--- a/content/_partials/scripts.hbs
+++ b/content/_partials/scripts.hbs
@@ -2,6 +2,9 @@
 <!-- JavaScript -->
 <script src="{{ assets }}/js/app/conf.js"></script>
 <script data-main="app/main" src="{{ assets }}/js/libs/require/require.js"></script>
+<script>
+	require(["tabber"], function() { });
+</script>
 
 {{#dev}}
 <script src="http://localhost:35730/livereload.js"></script>
