Committing changes for colours to tabs.

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -18,7 +18,8 @@
 @import "base_modules/table.less";
 @import "base_modules/story.less";
 @import "base_modules/rte.less";
-
+@import "base_modules/tabber.less";
+ 
 // MODULES
 // ----------------------------------------------------
 
