--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -149,10 +149,11 @@
 @MODULE-Overlay:                true;
 @MODULE-Pagination:             true;
 @MODULE-Print:                  true;
+@MODULE-Tabber:					true;
 @MODULE-Tabs:                   false;
 @MODULE-Tooltip:                true;
 @MODULE-Typography:             true;
-@MODULE-Story:             true;
+@MODULE-Story:             		true;
 @MODULE-Well:                   true;
 @MODULE-RTE:					true;
 @MODULE-Panel:					true;
